--- a/views/upload.html
+++ b/views/upload.html
@@ -41,12 +41,12 @@
           <br />
           <span style="font-weight: 600">Image type</span> <br />
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="img-type" id="fitRadio" value="fit" />
+            <input class="form-check-input" type="radio" name="img-type" id="fitRadio" value="Fit" />
             <label class="form-check-label" for="fitRadio"> Fit </label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="img-type" id="fullRadio" value="full" checked />
-            <label class="form-check-label" for="fullRadio"> Full </label>
+            <input class="form-check-input" type="radio" name="img-type" id="fillRadio" value="Fill" checked />
+            <label class="form-check-label" for="fillRadio"> Fill </label>
           </div>
           <br />
           <br />
